565 Prac Feb 3rd

--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -18,24 +18,31 @@ A partial ANOVA table was found to be
 
 (1) Complete the ANOVA table.
 
-$df_{Trt}=29-25=4$,$a=5,n=6$
+
 
 1174.24-186.53=987.71
 
 (987.71/4)/(186.53/25)
 
 (2) If it was a balanced design, what was number of levels for the factor in this study?
-(3) If it was a balanced design, what was the number of observations for each factor level in this study?
-(4) Write the overall hypotheses for this test.
-(5) Write the name of probability distribution along with its parameter value(s) used to test the above overall hypotheses.
+$df_{Trt}=29-25=4$,$a=5
 
-$F_{0}=\frac{MS_{Trt}}{MS_{E}}=\frac{1}{1}=$
+(3) If it was a balanced design, what was the number of observations for each factor level in this study?
+$n=6$
+
+(4) Write the overall hypotheses for this test.
+H0: $\mu_1=\mu_2=\mu_3=\mu_4=\mu_5$, or $\tau_1=\tau_2=\tau_3=\tau_4=\tau_5$
+H1: at least two of $\mu_i$ are different.
+
+(5) Write the name of probability distribution along with its parameter value(s) used to test the above overall hypotheses.
+$F_{(df_{Trt}=4,df_E=25)}=\frac{MS_{Trt}}{MS_{E}}$
 
 (6) Compute the standard error of the difference of two observed treatment means. (that is, compute $se(\bar y _{i.}-\bar y_{j.}))$).
 
-$$se(\bar y _{i.}-\bar y_{j.})=\sqrt{\frac{2MSE}n}=\sqrt{\frac{2\times0.01}8}=$$
+$$se(\bar y _{i.}-\bar y_{j.})=\sqrt{\frac{2MSE}n}=\sqrt{\frac{2\times7.4612}6}=1.577044$$
 
 (7) If you were to compute 95% confidence interval for the difference of two true treatment means, provide the name and its parameter value(s) of the probability distribution.
+$T_{(\frac{0.05}2)}$
 
 ### Problem 2 
 
@@ -47,34 +54,58 @@ A nutrition specialist is measuring the amount of patty acid present in blood wh
 
 |Source of Variance|Sum of Squares(SS)|Degrees of Freedom(df)|Mean Squares(MS)|F test|
 | --- | ---  | --- | --- | --- |
-|Diet |44.3|3 |||
-|Error|11.91|36|0.3308|   
-|Total|     |39|
+|Diet |443   |3 |147.6667||
+|Error|11.91 |36|0.3308|   
+|Total|454.91|39|
 
  (1) Complete the ANOVA table. (keep maximum of 4 decimal places)
  
 $\bar y_{..}=\frac{1}a\sum^a_{i=1}\bar y_{i.}=\frac{1}4(21.3+28.6+25.7+20.4=96)=24$
 
-$SS_{Trt}=n\sum^a_{i=1}(\bar y_{i.}−\bar y_{..})^2=$; $SS_{T}=SS_{Trt}+SS_{E}=$;
+$SS_{Trt}=n\sum^a_{i=1}(\bar y_{i.}−\bar y_{..})^2=10*((21.3-24)^2+(28.6-24)^2+(25.7-24)^2+(20.4-24)^210*44.3)=443$; 
 
-$MS_{Trt}=\frac{SS_{Trt}}{a-1}=\frac{1}4=$; $MS_{E}=\frac{SS_{E}}{N-a}=\frac{1}{1}=1$;
+$SS_{T}=SS_{Trt}+SS_{E}=443+11.91=454.91$;
 
-(21.3-24)^2+(28.6-24)^2+(25.7-24)^2+(20.4-24)^2=44.3
-44.3+11.91
+$MS_{Trt}=\frac{SS_{Trt}}{a-1}=\frac{443}3=147.6667$; 
+
+$MS_{E}=\frac{SS_{E}}{N-a}=\frac{11.91}{36}=0.3308333$;
 
  (2) If the diet effect was fixed, then
   (a) Write the overall hypotheses for this test.
+  H0: $\mu_A=\mu_B=\mu_C=\mu_D$, or $\tau_A=\tau_B=\tau_C=\tau_D$
+  H1: at least two of $\mu_i$ are different.
+  
   (b) Write the name of probability distribution along with its parameter value(s) used to test the above overall hypotheses.
-  (c) Compute the estimated variance of observed average fatty acid amount for each diet. (that is, compute ($\widehat{Var(\bar y_{i.})}$)
+  $F_{(df_{Trt}=3,df_E=36)}=\frac{MS_{Trt}}{MS_{E}}$
+  
+  (c) Compute the estimated variance of observed average fatty acid amount for each diet.
+  $\widehat{Var(\bar y_{i.})}=\frac{MS_{Trt}}n=147.6667/10=14.76667$
+  
   (d) If you were to compute 95% confidence interval for the true mean of each treatment, provide the name and its parameter value(s) of the probability distribution.
+  $F_{(df_{Trt}=3,df_E=36)}=\frac{MS_{Trt}}{MS_{E}}$
+  
   (e) Write a contrast to test the average fatty acid for diets A, B is same as average fatty acid for diets C, D.
+  $\mu_A+\mu_B-\mu_C-\mu_D=0$
+  
   (f) Write the probability distribution along with its parameter(s) used to test the above contrast.
+  $F_{(df_{C}=1,df_E=36)}=\frac{(\sum_{i=1}^ac_i\bar y_i)^2}{\frac{MS_{E}}n\sum_{i=1}^ac_i^2}$
+  
   (g) Write a contrast that is orthogonal to the above contrast.
+  $\mu_A-\mu_B+\mu_C-\mu_D=0$
+  
   (h) Compute the SS for each of the above contrasts. (Final answer is a number).
+  
+  
  (3) If the diet effect was random, then
   (a) Write the overall hypotheses for this test.
+  H0: $\sigma_{\tau}^2=0$, $E[MS_{Trt}]=\sigma^2$
+  H1: $\sigma_{\tau}^2\neq0$.
+  
   (b) Write the name of probability distribution along with its parameter value(s) used to test the above overall hypotheses.
-  (c) Compute the estimated variance of observed average fatty acid amount for each diet. (that is, compute $\widehat{Var(\bar y_{i.})}$).
+    $F_{(df_{Trt}=3,df_E=36)}=\frac{MS_{Trt}}{MS_{E}}$
+  
+  (c) Compute the estimated variance of observed average fatty acid amount for each diet.
+  $\widehat{Var(\bar y_{i.})}=\frac{MS_{Trt}}n=147.6667/10=14.76667$
 
  ---
 
@@ -91,17 +122,32 @@ $MS_{Trt}=\frac{SS_{Trt}}{a-1}=\frac{1}4=$; $MS_{E}=\frac{SS_{E}}{N-a}=\frac{1}{
  (2) What was the number of blocks in this study? 6
  (3) What was the total number of observations in this study? 30
  (4) If treatment and block effects were fixed,
-  (a) compute the estimated error variance. $\hat\sigma^2=MSE=10$, 2MSE/n
-  (b) write the overall hypotheses about treatments for this study. H0: $\mu_1=\mu_2=\mu_3=\mu_4=\mu_5$, or $\tau_1=\tau_2=\tau_3=\tau4=\tau5$
-  (c) write the name of probability distribution along with its parameter value(s) used to test the above hypothesis. $\frac{SS_{Trt}}{SS_E}\sim F_{4,20}$
+  (a) compute the estimated error variance. $\hat\sigma^2=MSE=10$
+  
+  (b) write the overall hypotheses about treatments for this study. 
+  H0: $\tau_1=\tau_2=\tau_3=\tau_4=\tau_5$
+  H1: at least two of $\tau_i$ are different.
+  
+  (c) write the name of probability distribution along with its parameter value(s) used to test the above hypothesis. $F_{(df_{Trt}=4,df_E=20)}=\frac{SS_{Trt}}{SS_E}$
   (d) write the overall hypothesis about blocks for this study. H0: $\beta_1=\beta_2=\beta_3=\beta_4=\beta_5=\beta_6$
-  (e) write the name of probability distribution along with its parameter value(s) used to test the above hypothesis. $\frac{SS_{Blk}}{SS_E}\sim F_{5,20}$
+  (e) write the name of probability distribution along with its parameter value(s) used to test the above hypothesis. $F_{(df_{Blk}=5,df_E=20)}=\frac{SS_{Blk}}{SS_E}$
+  
  (5) If treatment effect was fixed and block effect was random,
-  (a) compute the estimated variance for blocks.
+  (a) compute the estimated variance for blocks.$\hat\sigma_{Blk}^2=MS_{Blk}=40$
+  
   (b) write the overall hypothesis about treatments for this study.
+  H0: $\tau_1=\tau_2=\tau_3=\tau_4=\tau_5$
+  H1: at least two of $\tau_i$ are different.
+  
   (c) write the name of probability distribution along with its parameter value(s) used to test the above hypothesis.
+  $F_{(df_{Blk}=5,df_E=20)}=\frac{SS_{Blk}}{SS_E}$
+  
   (d) write the overall hypothesis about blocks for this study.
+  H0: $\sigma_{\beta}^2=0$, $E[MS_{Blk}]=\sigma^2$
+  H1: $\sigma_{\beta}^2\neq0$.
+  
   (e) write the name of probability distribution along with its parameter value(s) used to test the above hypothesis.
+  $F_{(df_{Blk}=5,df_E=20)}=\frac{SS_{Blk}}{SS_E}$
   
  ---
 
