--- a/static/stat565/temp_stat565.Rmd
+++ b/static/stat565/temp_stat565.Rmd
@@ -167,30 +167,33 @@ For a random treatment effects CRD, $\mu$ is a constant, $E[\tau_i]=0$, $Var[\ta
 For a fxed Block effects RCBD, $\mu$ and $\tau_i$ are constants, $\beta_j$ is a constant of the $j^{th}$ block; 
 For a random Block effects RCBD, $\mu$and $\tau_i$ are constants, $E[\beta_j]=0$, $Var[\beta_j]=\sigma_{\beta}^2$; 
 
-$$y_{ij}-\bar y_{i.}=\begin{cases}\mu+\tau_{i}+ε_{ij}-\frac1n \sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})=\begin{cases}\mu+\tau_{i}+ε_{ij}-\mu-\tau_{i}-\frac1n \sum_{j=1}^nε_{ij}=ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}&\text{FT-CRD}\\
-\mu+\tau_{i}+ε_{ij}-\mu-\frac1n \sum_{j=1}^n\tau_{i}-\frac1n \sum_{j=1}^nε_{ij}=\tau_{i}-\frac1n \sum_{j=1}^n\tau_{i}+ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}&\text{RT-CRD}\end{cases}\\
-\mu+\tau_{i}+\beta_j+ε_{ij}-\frac1b \sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})=\begin{cases}\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\beta_j-\frac1b \sum_{j=1}^bε_{ij}=ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
-\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac1b \sum_{j=1}^b\beta_j-\frac1b \sum_{j=1}^bε_{ij}=\beta_j-\frac1b \sum_{j=1}^b\beta_j+ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}&\text{RB-RCBD} \end{cases}
+$$y_{ij}-\bar y_{i.}=\left\{\begin{array}{lr}\mu+\tau_{i}+ε_{ij}-\frac1n \sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})&=\begin{cases}\mu+\tau_{i}+ε_{ij}-\mu-\tau_{i}-\frac1n \sum_{j=1}^nε_{ij}&=&ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}&\text{FT-CRD}\\
+\mu+\tau_{i}+ε_{ij}-\mu-\frac1n \sum_{j=1}^n\tau_{i}-\frac1n \sum_{j=1}^nε_{ij}&=\tau_{i}-\frac1n \sum_{j=1}^n\tau_{i}+&ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}&\text{RT-CRD}\end{cases}\\
+\mu+\tau_{i}+\beta_j+ε_{ij}-\frac1b \sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})&=\begin{cases}\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\beta_j-\frac1b \sum_{j=1}^bε_{ij}&=&ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
+\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac1b \sum_{j=1}^b\beta_j-\frac1b \sum_{j=1}^bε_{ij}&=\beta_j-\frac1b \sum_{j=1}^b\beta_j+&ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}&\text{RB-RCBD} \end{cases}
+\end{array}\right.$$
+
+
+
+$$\bar y_{i.}-\bar y_{..}=\begin{cases}\frac1n \sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})-\frac1{an}\sum_{i=1}^a\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})=
+\begin{cases}&\frac1n\sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}&\text{FT-CRD}\\
+\frac1n \sum_{j=1}^n\tau_{i}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^n\tau_{i}+&\frac1n \sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}&\text{RT-CRD}\end{cases}\\
+\frac1b \sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})=
+\begin{cases}&\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
+\frac1b \sum_{j=1}^b\beta_j-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b\beta_j+&\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{RB-RCBD} \end{cases}
 \end{cases}$$
 
 $$y_{ij}-\bar y_{.j}=
-\mu+\tau_{i}+\beta_j+ε_{ij}-\frac1a \sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})=\begin{cases}\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\beta_j-\frac1a \sum_{i=1}^aε_{ij}=ε_{ij}-\frac1a \sum_{i=1}^aε_{ij}&\text{FB-RCBD}\\
-\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac1a \sum_{i=1}^a\beta_j-\frac1a \sum_{j=1}^aε_{ij}=\beta_j-\frac1a \sum_{i=1}^a\beta_j+ε_{ij}-\frac1a \sum_{i=1}^aε_{ij}&\text{RB-RCBD} \end{cases}$$
-
-$$\bar y_{i.}-\bar y_{..}=\begin{cases}\frac1n \sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})-\frac1{an}\sum_{i=1}^a\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})=
-\begin{cases}\frac1n\sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}&\text{FT-CRD}\\
-\frac1n \sum_{j=1}^n\tau_{i}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^n\tau_{i}+\frac1n \sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}&\text{RT-CRD}\end{cases}\\
-\frac1b \sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})=
-\begin{cases}\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
-\frac1b \sum_{j=1}^b\beta_j-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b\beta_j+\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{RB-RCBD} \end{cases}
-\end{cases}$$
+\mu+\tau_{i}+\beta_j+ε_{ij}-\frac1a \sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})=\begin{cases}\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\beta_j-\frac1a \sum_{i=1}^aε_{ij}&=ε_{ij}-\frac1a \sum_{i=1}^aε_{ij}&\text{FB-RCBD}\\
+\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac1a \sum_{i=1}^a\beta_j-\frac1a \sum_{j=1}^aε_{ij}&=ε_{ij}-\frac1a \sum_{i=1}^aε_{ij}+\beta_j-\frac1a \sum_{i=1}^a\beta_j&\text{RB-RCBD}  \end{cases}$$
 
 $$\bar y_{.j}-\bar y_{..}=\frac1a \sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})=
-\begin{cases}\frac1a\sum_{i=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
-\frac1a \sum_{i=1}^a\beta_j-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b\beta_j+\frac1a\sum_{i=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{RB-RCBD} \end{cases}$$
+\begin{cases} &\frac1a\sum_{i=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
+\frac1a \sum_{i=1}^a\beta_j-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b\beta_j+&\frac1a\sum_{i=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{RB-RCBD} \end{cases}$$
 
 $$y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}=\mu+\tau_{i}+\beta_j+ε_{ij}-\frac1a \sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})-\frac1b \sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})$$
 $$=ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}-\frac1a\sum_{i=1}^a\tau_{i}-\frac1b\sum_{j=1}^b\beta_{j}\quad\text{FB-RCBD}$$
+
 
 
  ---
