--- a/static/stat562/hw_stat562.Rmd
+++ b/static/stat562/hw_stat562.Rmd
@@ -383,6 +383,9 @@ $\frac{\sqrt n}{\Gamma(n)}(x\sqrt n+n)^{n-1} e^{-(x\sqrt n+n)}\approx \frac1{\sq
 
  (a). Prove Theorem 5.5.4. (Hint: Since h is continuous, given $\varepsilon>0$ we can find a $\delta>0$such that $|h(x_n)-h(x)|<\varepsilon$: whenever $|X_n-X|<\delta$. Translate this into probabilitystatements. )
 
+$$\underrightarrow{p}\quad \lim_{\substack{x\to\infty\\y\to\infty}}()$$
+
+
  (b). In Example 5.5.8, find a subsequence of the $X_i$S that converges almost surely, that is, that converges pointwise.
  
  ---
