--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -72,14 +72,14 @@ $MS_{E}=\frac{SS_{E}}{N-a}=\frac{11.91}{36}=0.3308333$;
 
  (2) If the diet effect was fixed, then
   (a) Write the overall hypotheses for this test.
-  H0: $\mu_A=\mu_B=\mu_C=\mu_D$, or $\tau_A=\tau_B=\tau_C=\tau_D$
-  H1: at least two of $\mu_i$ are different.
+  H0: $\mu_A=\mu_B=\mu_C=\mu_D$, or $\tau_A=\tau_B=\tau_C=\tau_D=0$
+  H1: at least two of $\mu_i$ are different or at least one $\tau_i=0$.
   
   (b) Write the name of probability distribution along with its parameter value(s) used to test the above overall hypotheses.
   $F_{(df_{Trt}=3,df_E=36)}=\frac{MS_{Trt}}{MS_{E}}$
   
   (c) Compute the estimated variance of observed average fatty acid amount for each diet.
-  $\widehat{Var(\bar y_{i.})}=\frac{MS_{Trt}}n=147.6667/10=14.76667$
+  $\widehat{Var(\bar y_{i.})}=\frac{MS_{E}}n=0.3308/10=0.0331$
   
   (d) If you were to compute 95% confidence interval for the true mean of each treatment, provide the name and its parameter value(s) of the probability distribution.
   $T_{\frac{0.05}2,df_E=36)}$
@@ -88,7 +88,7 @@ $MS_{E}=\frac{SS_{E}}{N-a}=\frac{11.91}{36}=0.3308333$;
   $\mu_A+\mu_B-\mu_C-\mu_D=0$
   
   (f) Write the probability distribution along with its parameter(s) used to test the above contrast.
-  $F_{(df_{C}=1,df_E=36)}=\frac{(\sum_{i=1}^ac_i\bar y_i)^2}{\frac{MS_{E}}n\sum_{i=1}^ac_i^2}$
+  $F_{(df_{C}=1,df_E=36)}=\frac{(\sum_{i=1}^ac_i\bar y_{i.})^2}{\frac{MS_{E}}n\sum_{i=1}^ac_i^2}$
   
   (g) Write a contrast that is orthogonal to the above contrast.
   $\mu_A-\mu_B+\mu_C-\mu_D=0$
@@ -107,7 +107,7 @@ $MS_{E}=\frac{SS_{E}}{N-a}=\frac{11.91}{36}=0.3308333$;
     $F_{(df_{Trt}=3,df_E=36)}=\frac{MS_{Trt}}{MS_{E}}$
   
   (c) Compute the estimated variance of observed average fatty acid amount for each diet.
-  $\widehat{Var(\bar y_{i.})}=\frac{MS_{Trt}}n=147.6667/10=14.76667$
+  $\widehat{Var(\bar y_{i.})}=\sigma_{\tau}^2+\frac{\sigma^2}{n}=\frac{MS_{Trt}-MS_E}n+\frac{MS_{E}}n=\frac{MS_{Trt}}n=147.6667/10=14.76667$
 
  ---
 
@@ -221,9 +221,10 @@ $Var(y_{ij}-\bar y_{i.})=\sigma^2+\frac{\sigma^2}n-\frac2n\sigma^2=\frac{n-1}n\s
  
 |     |$y_{ij}$  |$\bar y_{..}$|$\bar y_{i.}$|$\bar y_{.j}$|$MS_{Trt}$|$MS_{Blk}$|$MS_{E}$|
 | --- |   ---    |  ---        |  ---        |   ---       | ---      | ---      | ---    |
-|E[]  |  $\mu$   |  $\mu$      |$\mu+\tau_i$ |$\mu+\beta_j$|$\sigma^2+\frac{n}{a-1}\sum_{i=1}^a\tau_i^2$|$\sigma^2+\frac{a}{b-1}\sum_{j=1}^b\beta_j^2$|$\sigma^2$|
+|E[]  |  $\mu$   |  $\mu$      |$\mu+\tau_i$ |$\mu+\beta_j$|$\sigma^2+\frac{n}{a-1}\sum_{i=1}^a\tau_i^2$||$\sigma^2$|
 |V[]  |$\sigma^2$|$\frac{\sigma^2}{na}$|$\frac{\sigma^2}{n}$|
 |E[^2]|$\mu^2+\sigma^2$|$\mu^2+\frac{\sigma^2}{na}$|$\mu_i^2+\frac{\sigma^2}{n}$|
+|E[r.]|  $\mu$   |  $\mu$      |$\mu+\tau_i$ |             |$\sigma^2+\frac{b}{a-1}\sum_{i=1}^a\tau_i^2$|$\sigma^2+\frac{a}{b-1}\sum_{j=1}^b\beta_j^2$|
 |V[r.]|$\sigma^2+\sigma_\tau^2$|$\frac{\sigma_\tau^2}{a}+\frac{\sigma^2}{na}$|$\frac{\sigma^2}{n}+\sigma_\tau^2$|
 |E[^2]|$\mu^2+\sigma^2+\sigma_\tau^2$|$\mu^2+\frac{\sigma_\tau^2}{a}+\frac{\sigma^2}{na}$|$\mu_i^2+\frac{\sigma^2}{n}+\sigma_\tau^2$|
 
